fixing error display when study is behind a download agreement

--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -685,6 +685,10 @@ h6,
   border-radius: 4px;
 }
 
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
+}
+
 .upload-wizard {
   font-size: 18px;
 }
